# laschon-kodex

./: .gitignore  README.md  pyproject.toml
laschonkodex/: cli.py
